
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_6__ ;
typedef struct TYPE_8__ TYPE_1__ ;


typedef scalar_t__ uint32_t ;
struct TYPE_9__ {scalar_t__ const i_track_ID; } ;
struct TYPE_8__ {scalar_t__ i_type; struct TYPE_8__* p_next; } ;
typedef TYPE_1__ MP4_Box_t ;


 scalar_t__ ATOM_trex ;
 TYPE_6__* BOXDATA (TYPE_1__*) ;
 TYPE_1__* MP4_BoxGet (TYPE_1__*,char*) ;

__attribute__((used)) static MP4_Box_t * MP4_GetTrexByTrackID( MP4_Box_t *p_moov, const uint32_t i_id )
{
    if(!p_moov)
        return ((void*)0);
    MP4_Box_t *p_trex = MP4_BoxGet( p_moov, "mvex/trex" );
    while( p_trex )
    {
        if ( p_trex->i_type == ATOM_trex &&
             BOXDATA(p_trex) && BOXDATA(p_trex)->i_track_ID == i_id )
                break;
        else
            p_trex = p_trex->p_next;
    }
    return p_trex;
}
